# model-shelf

./: .gitignore  README.md  changes.md  model-shelf.json  pyproject.toml  registry.json
docs/: opencode-2026-06-30.md
models/: registry.json
models/hf/deepreinforce-ai/Ornith-1.0-35B-FP8/: commands.md  manifest.json
scripts/: install-global.ps1  install-global.sh
skills/model-shelf/: SKILL.md
src/model_shelf/: cli.py
tests/: conftest.py  test_install.py  test_layout.py  test_search.py
