[project]
name = "model-shelf"
version = "0.1.0"
description = "Local-first model storage standard and resolver."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ms = "model_shelf.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8"]

[tool.uv]
package = true
